--- a/article-inside.html
+++ b/article-inside.html
@@ -236,29 +236,29 @@
           </address>
           <div class="header__icons-buttons">
             <button type="button" class="icon-btn header__seacrh-btn">
-              <a href="./404.html"> 
-              <img src="./common/svg/Search.svg" alt="">
-            </a>
+              <a href="./404.html">
+                <img src="./common/svg/Search.svg" alt="">
+              </a>
             </button>
             <button type="button" class="icon-btn header__map-btn">
               <a href="./404.html">
-              <img src="./common/svg/Location.svg" alt="">
-            </a>
+                <img src="./common/svg/Location.svg" alt="">
+              </a>
             </button>
-              <button type="button" class="icon-btn header__heart-btn">
-                <a href="./favorites-products.html">
+            <button type="button" class="icon-btn header__heart-btn">
+              <a href="./favorites-products.html">
                 <img src="./common/svg/Heart.svg" alt="">
               </a>
-              </button>
-              <button type="button" class="icon-btn">
-                <a href="./user-account.html">
+            </button>
+            <button type="button" class="icon-btn">
+              <a href="./user-account.html">
                 <img src="./common/svg/User.svg" alt="">
-               </a>
-              </button>
+              </a>
+            </button>
             <button type="button" class="icon-btn">
               <a href="./404.html">
-              <img src="./common/svg/Cart.svg" alt="">
-             </a>
+                <img src="./common/svg/Cart.svg" alt="">
+              </a>
             </button>
           </div>
         </div>
@@ -345,34 +345,41 @@
             <div class="article__main-content">
               <img class="article__img" src="./common/images/biopsy.png" alt="">
               <p class="article__paragraph">
-                Биопсия — диагностическая процедура, которую проводят с целью получения образца ткани (биоптата) «подозрительного»
-места, например, опухоли или полипа.
+                Биопсия — диагностическая процедура, которую проводят с целью получения образца ткани (биоптата)
+                «подозрительного»
+                места, например, опухоли или полипа.
               </p>
               <p class="article__paragraph">
-                Биопсия необходима для подтверждения диагноза при онкологических заболеваниях. Все клетки организма имеют
-характерное строение, в зависимости от того, к какой ткани они принадлежат. При развитии злокачественной опухоли
-структура клеток нарушается, и эти изменения можно увидеть под микроскопом.
+                Биопсия необходима для подтверждения диагноза при онкологических заболеваниях. Все клетки организма
+                имеют
+                характерное строение, в зависимости от того, к какой ткани они принадлежат. При развитии злокачественной
+                опухоли
+                структура клеток нарушается, и эти изменения можно увидеть под микроскопом.
               </p>
               <p class="article__paragraph">
-                Врач, исследующий образцы ткани или клетки, полученные при помощи биопсии, может однозначно сказать, есть ли
-у пациента онкологическое заболевание. В то время как другие исследования позволяют заподозрить рак с разной
-степенью вероятности, биопсия помогает установить точный диагноз.
+                Врач, исследующий образцы ткани или клетки, полученные при помощи биопсии, может однозначно сказать,
+                есть ли
+                у пациента онкологическое заболевание. В то время как другие исследования позволяют заподозрить рак с
+                разной
+                степенью вероятности, биопсия помогает установить точный диагноз.
               </p>
               <div class="article__line"></div>
               <h2 class="article__subtitle">Подзаголовок очередного образца</h2>
               <p class="article__paragraph">
                 После проведения биопсии материал отправляют на исследование в лабораторию. Обычно результат получают
-в течение недели, но, возможно, что время будет меньшее. Трактовки полученных результатов:
+                в течение недели, но, возможно, что время будет меньшее. Трактовки полученных результатов:
               </p>
-              <p class="article__paragraph"> &mdash; Ориентировочное заключение. Прописываются заболевания, которые касаются изменений в материале.
+              <p class="article__paragraph"> &mdash; Ориентировочное заключение. Прописываются заболевания, которые
+                касаются изменений в материале.
                 Но это не стопроцентное определение диагноза. Чтоб точно его поставить нужно провести дополнительные
                 исследования.
-                </p>
-              <p class="article__paragraph"> &mdash; Предварительное заключение. Специалисты описают, какие есть изменения в материала. После этого
+              </p>
+              <p class="article__paragraph"> &mdash; Предварительное заключение. Специалисты описают, какие есть
+                изменения в материала. После этого
                 по этому результату врач может сопоставить данные с уже имеющимися результатами других исследований.
                 Затем он ставит заключительный диагноз.
-                </p>
-              <p class="article__paragraph"> &mdash; 
+              </p>
+              <p class="article__paragraph"> &mdash;
                 Заключительной диагноз. По результатам биопсии специалисты четко описывают изменения, а также дают
                 точное заключение. На том этапе уже не требуется заключение других врачей и проведение дополнительных
                 исследований. Это уже клинический диагноз.</p>
@@ -554,8 +561,8 @@
         </div>
         <div class="footer__line"></div>
         <div class="footer__bottom">
-            <p>© «Альна-Медикал», 2021</p>
-            <a class="footer__link" href="#">Политика конфидециальности</a>
+          <p>© «Альна-Медикал», 2021</p>
+          <a class="footer__link" href="#">Политика конфидециальности</a>
           <a class="footer__link" href="#">Пользовательское соглашение</a>
           <div class="footer__card-icons">
             <img class="footer__card-icons--item" src="common/svg/mir.svg" alt="mir logo">
@@ -567,22 +574,26 @@
     </footer>
     <div class="feedback">
       <div class="feedback__container">
-      <div class="feedback__content">
-      <h1 class="feedback__title">Обратная связь</h1>
-      <form class="feedback__form" action="">
-          <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
-          <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
-          <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
-          <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
+        <div class="feedback__content">
+          <h1 class="feedback__title">Обратная связь</h1>
+          <form class="feedback__form" action="">
+            <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name"
+                placeholder="Введите имя" type="text"></label>
+            <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7("
+                type="tel"></label>
+            <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email"
+                placeholder="Введите e-mail" type="email"></label>
+            <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва"
+                name="" id="" cols="30" rows="10"></textarea></label>
+            <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha"></div>
-          <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
-      </form>
+            <div class="feedback__captcha"></div>
+            <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
+          </form>
+        </div>
+        <button class="feedback__btn-close">&#9587;</button>
       </div>
-      <button class="feedback__btn-close">&#9587;</button>
-  </div>
-  </div>
+    </div>
   </div>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
