--- a/catalog-individual.html
+++ b/catalog-individual.html
@@ -341,29 +341,29 @@
           </address>
           <div class="header__icons-buttons">
             <button type="button" class="icon-btn header__seacrh-btn">
-              <a href="./404.html"> 
-              <img src="./common/svg/Search.svg" alt="">
-            </a>
+              <a href="./404.html">
+                <img src="./common/svg/Search.svg" alt="">
+              </a>
             </button>
             <button type="button" class="icon-btn header__map-btn">
               <a href="./404.html">
-              <img src="./common/svg/Location.svg" alt="">
-            </a>
+                <img src="./common/svg/Location.svg" alt="">
+              </a>
             </button>
-              <button type="button" class="icon-btn header__heart-btn">
-                <a href="./favorites-products.html">
+            <button type="button" class="icon-btn header__heart-btn">
+              <a href="./favorites-products.html">
                 <img src="./common/svg/Heart.svg" alt="">
               </a>
-              </button>
-              <button type="button" class="icon-btn">
-                <a href="./user-account.html">
+            </button>
+            <button type="button" class="icon-btn">
+              <a href="./user-account.html">
                 <img src="./common/svg/User.svg" alt="">
-               </a>
-              </button>
+              </a>
+            </button>
             <button type="button" class="icon-btn">
               <a href="./404.html">
-              <img src="./common/svg/Cart.svg" alt="">
-             </a>
+                <img src="./common/svg/Cart.svg" alt="">
+              </a>
             </button>
           </div>
         </div>
@@ -969,8 +969,8 @@
         </div>
         <div class="footer__line"></div>
         <div class="footer__bottom">
-            <p>© «Альна-Медикал», 2021</p>
-            <a class="footer__link" href="#">Политика конфидециальности</a>
+          <p>© «Альна-Медикал», 2021</p>
+          <a class="footer__link" href="#">Политика конфидециальности</a>
           <a class="footer__link" href="#">Пользовательское соглашение</a>
           <div class="footer__card-icons">
             <img class="footer__card-icons--item" src="common/svg/mir.svg" alt="mir logo">
@@ -982,22 +982,26 @@
     </footer>
     <div class="feedback">
       <div class="feedback__container">
-      <div class="feedback__content">
-      <h1 class="feedback__title">Обратная связь</h1>
-      <form class="feedback__form" action="">
-          <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
-          <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
-          <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
-          <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
+        <div class="feedback__content">
+          <h1 class="feedback__title">Обратная связь</h1>
+          <form class="feedback__form" action="">
+            <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name"
+                placeholder="Введите имя" type="text"></label>
+            <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7("
+                type="tel"></label>
+            <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email"
+                placeholder="Введите e-mail" type="email"></label>
+            <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва"
+                name="" id="" cols="30" rows="10"></textarea></label>
+            <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha"></div>
-          <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
-      </form>
+            <div class="feedback__captcha"></div>
+            <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
+          </form>
+        </div>
+        <button class="feedback__btn-close">&#9587;</button>
       </div>
-      <button class="feedback__btn-close">&#9587;</button>
-  </div>
-  </div>
+    </div>
   </div>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
