--- a/user-account.html
+++ b/user-account.html
@@ -217,92 +217,92 @@
     <div class="wrapper">
         <header class="header">
             <div class="container">
-              <div class="header__top">
-                <div class="logo">
-                  <button type="button" class="burger header__burger">
-                    <span></span>
-                  </button>
-                  <a href="./index.html">
-                    <img src="./common/svg/logo.svg" alt="logo-company" class="logo__icon" />
-                  </a>
-                </div>
-                <button class="main-btn header__dropdown-btn">
-                  <span>КАТАЛОГ</span>
-                  <i id="icon" class="header__dropdown-icon-down" stroke="#fff" data-feather="chevron-down"></i>
-                  <i id="icon" class="header__dropdown-icon-up" stroke="#fff" data-feather="chevron-up"></i>
-                </button>
-                <div class="search header__search">
-                  <i id="icon" class="search__icon" data-feather="search"></i>
-                  <input type="search" placeholder="Введите товар для поиска" class="search__input" />
-                </div>
-                <address class="tel header__tel">
-                  <a href="tel:8 800 245 56 56" class="tel__num">8 800 245 56 56</a>
-                </address>
-                <div class="header__icons-buttons">
-                  <button type="button" class="icon-btn header__seacrh-btn">
-                    <a href="./404.html"> 
-                    <img src="./common/svg/Search.svg" alt="">
-                  </a>
-                  </button>
-                  <button type="button" class="icon-btn header__map-btn">
-                    <a href="./404.html">
-                    <img src="./common/svg/Location.svg" alt="">
-                  </a>
-                  </button>
-                    <button type="button" class="icon-btn header__heart-btn">
-                      <a href="./favorites-products.html">
-                      <img src="./common/svg/Heart.svg" alt="">
-                    </a>
+                <div class="header__top">
+                    <div class="logo">
+                        <button type="button" class="burger header__burger">
+                            <span></span>
+                        </button>
+                        <a href="./index.html">
+                            <img src="./common/svg/logo.svg" alt="logo-company" class="logo__icon" />
+                        </a>
+                    </div>
+                    <button class="main-btn header__dropdown-btn">
+                        <span>КАТАЛОГ</span>
+                        <i id="icon" class="header__dropdown-icon-down" stroke="#fff" data-feather="chevron-down"></i>
+                        <i id="icon" class="header__dropdown-icon-up" stroke="#fff" data-feather="chevron-up"></i>
                     </button>
-                    <button type="button" class="icon-btn">
-                      <a href="./user-account.html">
-                      <img src="./common/svg/User.svg" alt="">
-                     </a>
-                    </button>
-                  <button type="button" class="icon-btn">
-                    <a href="./404.html">
-                    <img src="./common/svg/Cart.svg" alt="">
-                   </a>
-                  </button>
+                    <div class="search header__search">
+                        <i id="icon" class="search__icon" data-feather="search"></i>
+                        <input type="search" placeholder="Введите товар для поиска" class="search__input" />
+                    </div>
+                    <address class="tel header__tel">
+                        <a href="tel:8 800 245 56 56" class="tel__num">8 800 245 56 56</a>
+                    </address>
+                    <div class="header__icons-buttons">
+                        <button type="button" class="icon-btn header__seacrh-btn">
+                            <a href="./404.html">
+                                <img src="./common/svg/Search.svg" alt="">
+                            </a>
+                        </button>
+                        <button type="button" class="icon-btn header__map-btn">
+                            <a href="./404.html">
+                                <img src="./common/svg/Location.svg" alt="">
+                            </a>
+                        </button>
+                        <button type="button" class="icon-btn header__heart-btn">
+                            <a href="./favorites-products.html">
+                                <img src="./common/svg/Heart.svg" alt="">
+                            </a>
+                        </button>
+                        <button type="button" class="icon-btn">
+                            <a href="./user-account.html">
+                                <img src="./common/svg/User.svg" alt="">
+                            </a>
+                        </button>
+                        <button type="button" class="icon-btn">
+                            <a href="./404.html">
+                                <img src="./common/svg/Cart.svg" alt="">
+                            </a>
+                        </button>
+                    </div>
                 </div>
-              </div>
             </div>
             <hr class="header__line">
             </hr>
             <div class="container">
-              <nav class="header__nav">
-                <button type="button" class="burger nav__burger">
-                  <span></span>
-                </button>
-                <div class="site-nav">
-                  <img src="./common/svg/sale.svg" alt="sale" class="site-nav__icon-sale" />
-                  <div class="site-nav__item">
-                    <a href="./404.html" class="site-nav__link_red"> Акции </a>
-                  </div>
-                  <span></span>
-                  <div class="site-nav__item">
-                    <a href="./catalog-main.html" class="site-nav__link">Каталог</a>
-                  </div>
-                  <span></span>
-                  <div class="site-nav__item">
-                    <a href="./directions-page.html" class="site-nav__link">Направления</a>
-                  </div>
-                  <span></span>
-                  <div class="site-nav__item">
-                    <a href="./404.html" class="site-nav__link">Бренды</a>
-                  </div>
-                  <span></span>
-                  <div class="site-nav__item">
-                    <a href="./404.html" class="site-nav__link">О компании</a>
-                  </div>
-                  <span></span>
-                  <div class="site-nav__item">
-                    <a href="./404.html" class="site-nav__link">Контакты</a>
-                  </div>
-                </div>
-              </nav>
+                <nav class="header__nav">
+                    <button type="button" class="burger nav__burger">
+                        <span></span>
+                    </button>
+                    <div class="site-nav">
+                        <img src="./common/svg/sale.svg" alt="sale" class="site-nav__icon-sale" />
+                        <div class="site-nav__item">
+                            <a href="./404.html" class="site-nav__link_red"> Акции </a>
+                        </div>
+                        <span></span>
+                        <div class="site-nav__item">
+                            <a href="./catalog-main.html" class="site-nav__link">Каталог</a>
+                        </div>
+                        <span></span>
+                        <div class="site-nav__item">
+                            <a href="./directions-page.html" class="site-nav__link">Направления</a>
+                        </div>
+                        <span></span>
+                        <div class="site-nav__item">
+                            <a href="./404.html" class="site-nav__link">Бренды</a>
+                        </div>
+                        <span></span>
+                        <div class="site-nav__item">
+                            <a href="./404.html" class="site-nav__link">О компании</a>
+                        </div>
+                        <span></span>
+                        <div class="site-nav__item">
+                            <a href="./404.html" class="site-nav__link">Контакты</a>
+                        </div>
+                    </div>
+                </nav>
             </div>
-          </header>
+        </header>
         <main class="account">
             <div class="container-main">
                 <div class="account__nav">
@@ -843,8 +843,8 @@
                 </div>
                 <div class="footer__line"></div>
                 <div class="footer__bottom">
-                        <p>© «Альна-Медикал», 2021</p>
-                        <a class="footer__link" href="#">Политика конфидециальности</a>
+                    <p>© «Альна-Медикал», 2021</p>
+                    <a class="footer__link" href="#">Политика конфидециальности</a>
                     <a class="footer__link" href="#">Пользовательское соглашение</a>
                     <div class="footer__card-icons">
                         <img class="footer__card-icons--item" src="common/svg/mir.svg" alt="mir logo">
@@ -856,21 +856,25 @@
         </footer>
         <div class="feedback">
             <div class="feedback__container">
-            <div class="feedback__content">
-            <h1 class="feedback__title">Обратная связь</h1>
-            <form class="feedback__form" action="">
-                <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
-                <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
-                <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-                <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
-                <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
-                    с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-                <div class="feedback__captcha"></div>
-                <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
-            </form>
+                <div class="feedback__content">
+                    <h1 class="feedback__title">Обратная связь</h1>
+                    <form class="feedback__form" action="">
+                        <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name"
+                                placeholder="Введите имя" type="text"></label>
+                        <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone"
+                                placeholder="+7(" type="tel"></label>
+                        <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email"
+                                placeholder="Введите e-mail" type="email"></label>
+                        <label class="feedback__text" for="feedback-text"><textarea id="feedback-text"
+                                placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
+                        <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
+                            с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
+                        <div class="feedback__captcha"></div>
+                        <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
+                    </form>
+                </div>
+                <button class="feedback__btn-close">&#9587;</button>
             </div>
-            <button class="feedback__btn-close">&#9587;</button>
-        </div>
         </div>
     </div>
     <script src="https://unpkg.com/feather-icons"></script>
